--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@ $(document).ready(function() {
 <div class="theme-switch">
    			<div class="switch"></div>
   		</div>
-<p style="float: center"><a href="https://www.venith.net">© 2025 - Powered By The Venith Network</a></center></br></p>
+<p style="float: center"><a href="https://www.venith.net">© 2025 - Powered By The Veltron Network</a></center></br></p>
 </section>
 </section>
 <div class="mobile-container">
