--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 <meta name="twitter:creator" content="@DragonLinux" />
 <meta name="twitter:title" content="Dragon Linux" />
 <meta name="twitter:description" content="The most dragonified Linux distribution to exist" />
-<meta name="twitter:image" content="https://dragon-linux.venith.net/assets/images/favicon.png" />
+<meta name="twitter:image" content="https://dragon-linux.veltron.net/assets/images/favicon.png" />
 <meta name="twitter:image:width" content="256">
 <meta name="twitter:image:height" content="256">
-<meta property="og:image" content="https://dragon-linux.venith.net/assets/images/favicon.png">
+<meta property="og:image" content="https://dragon-linux.veltron.net/assets/images/favicon.png">
 <meta property="og:title" content="Dragon Linux">
 <link rel="icon" type="image/png" href="assets/images/favicon.png" />
 <link rel="canonical" href="index.html" />
