--- a/index.html
+++ b/index.html
@@ -264,15 +264,15 @@ $(document).ready(function() {
 <h4>Now, what are you waiting for?!?</h4>
 <h3>Download Dragon Linux <strong>NOW</strong> ¹ ²</h3>
 <p><br></br>
-<a href="https://sourceforge.net/projects/sujix-linux/files/latest/download"><img title="dragondownload" alt="dragondownload" src="assets/images/dragondownload.png" /></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://discord.go.venith.net"><img title="dragondownload" alt="dragondownload" src="assets/images/venith.png" /></a></p>
-<p>&nbsp; <a href="https://sourceforge.net/projects/sujix-linux/files/latest/download">Download Today!</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="https://discord.go.venith.net">Join Our Discord Today!</a>
+<a href="https://sourceforge.net/projects/sujix-linux/files/latest/download"><img title="dragondownload" alt="dragondownload" src="assets/images/dragondownload.png" /></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://discord.go.veltron.net"><img title="dragondownload" alt="dragondownload" src="assets/images/veltron.png" /></a></p>
+<p>&nbsp; <a href="https://sourceforge.net/projects/sujix-linux/files/latest/download">Download Today!</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="https://discord.go.veltron.net">Join Our Discord Today!</a>
 <br></br><br></br><br></br>
 ¹ experience dragon linux today!!
 <br></br>
 ² if you need support or just want to chat with our technology hangout join our discord today!</p>
 </div>
 <div class="column col-6 col-md-12">
-<a href="https://dragoonsden.venith.net" target="_blank" rel="noopener noreferrer">
+<a href="https://dragoonsden.veltron.net" target="_blank" rel="noopener noreferrer">
   <img src="assets/images/metalseadramon-digimon.gif" alt="MetalSeadramon">
 </a>
 </div>
@@ -286,7 +286,7 @@ $(document).ready(function() {
 <div class="theme-switch">
    			<div class="switch"></div>
   		</div>
-<p style="float: center"><a href="https://www.venith.net">© 2025 - Powered By The Veltron Network</a></center></br></p>
+<p style="float: center"><a href="https://www.veltron.net">© 2025 - Powered By The Veltron Network</a></center></br></p>
 </section>
 </section>
 <div class="mobile-container">
